force-app/main/default/objects/ChargingStation__c/ChargingStation__c.object-meta.xml
<CustomObject>
    <label>Charging Station</label>
    <nameField>
        <label>Charging Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charging Stations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>