force-app/main/default/objects/ChargingStation__c/fields/Delivery_Waypoint__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Waypoint__c</fullName>
    <label>Delivery Waypoint</label>
    <referenceTo>DeliveryWaypoint__c</referenceTo>
    <relationshipLabel>Charging Stations</relationshipLabel>
    <relationshipName>Charging_Stations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>