force-app/main/default/objects/ChargingStation__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>